# GearX

./: CMakeLists.txt  CMakeSettings.json  GearXLuaAPI.md  README.md  main.cpp  starter.cpp
Depencies/SDL3/include/SDL3/: SDL_gesture.c  SDL_gesture.h
Depencies/SDL3_gfx/: CMakeLists.txt  README.md  SDL3_gfxPrimitives_font.h  SDL3_imageFilter.c  SDL3_imageFilter.h
Depencies/cereal/: CMakeLists.txt
Depencies/cereal/unittests/: CMakeLists.txt  map.hpp  run_portability_test.cmake
Depencies/cereal/unittests/boost/: CMakeLists.txt
Depencies/cereal/unittests/cpp17/: CMakeLists.txt
Depencies/lua/: CMakeLists.txt
Depencies/rttr/: CMakeLists.txt
Depencies/rttr/CMake/: 3rd_party_libs.cmake  config.cmake
Depencies/rttr/doc/md_pages/tutorial/: policies.md  register_enums.md  register_methods.md  register_properties.md
Depencies/rttr/src/: CMakeLists.txt
Depencies/rttr/src/rttr/: CMakeLists.txt
Depencies/sol2/: CMakeLists.txt
GearX/: CMakeLists.txt  engine.cpp  engine.hpp  starter.cpp  starter.hpp
GearX/asset/: GearX.d.lua
GearX/example/: GearX.d.lua  world.json
GearX/example/Levels/: Level.json
GearX/example/Scripts/: contact.lua  controler.lua  endcontact.lua  game_init.lua  mouse_controler.lua  mouse_tracer.lua  register_ground.lua  register_input_callbacks.lua  register_player.lua
GearX/runtime/: CMakeLists.txt  depencies.hpp
GearX/runtime/core/event/: event.cpp  event.hpp  object_event.cpp  object_event.hpp
GearX/runtime/core/framework/component/: component.cpp  component.hpp
GearX/runtime/core/framework/component/rigidbody/: rigidbody_component.cpp  rigidbody_component.hpp
GearX/runtime/core/framework/component/script/: script_component.cpp  script_component.hpp
GearX/runtime/core/framework/component/texture/: texture_component.cpp  texture_component.hpp
GearX/runtime/core/framework/component/transform/: transform_component.cpp  transform_component.hpp
GearX/runtime/core/framework/level/: level.cpp  level.hpp
GearX/runtime/core/framework/object/: object.cpp  object.hpp
GearX/runtime/core/framework/world/: world.cpp  world.hpp
GearX/runtime/core/global/: global.cpp  global.hpp
GearX/runtime/core/system/: system.hpp
GearX/runtime/core/system/audio/: audio_system.cpp  audio_system.hpp
GearX/runtime/core/system/physics/: physics_system.cpp  physics_system.hpp
GearX/runtime/core/system/render/: render_system.cpp  render_system.hpp
GearX/runtime/core/system/script/: script_system.cpp  script_system.hpp
GearX/runtime/core/ui/: editor.cpp  editor.hpp  imgui_style.cpp  imgui_style.hpp  ui.cpp  ui.hpp
GearX/runtime/core/utils/: fps_controler.hpp  object_wrapper.cpp  object_wrapper.hpp  points_of_texture.cpp  points_of_texture.hpp  render_axis.cpp  render_axis.hpp  render_shape.cpp  render_shape.hpp  thread_pool.cpp  thread_pool.hpp
GearX/runtime/resources/asset_manager/: asset.hpp  asset_manager.cpp  asset_manager.hpp
GearX/runtime/resources/loader/: font_loader.cpp  font_loader.hpp  script_loader.cpp  script_loader.hpp  sound_loader.cpp  sound_loader.hpp  texture_loader.cpp  texture_loader.hpp
test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GearX.sln  GearXEngine.vcxproj  GearXEngine.vcxproj.filters  GearXStarter.vcxproj  GearXStarter.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
test/Depencies/SDL3_gfx/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  SDL3_gfx.sln  SDL3_gfx_Static.vcxproj  SDL3_gfx_Static.vcxproj.filters  cmake_install.cmake
test/Depencies/box2d/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  box2d.sln  cmake_install.cmake
test/Depencies/box2d/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  box2d.vcxproj  box2d.vcxproj.filters  cmake_install.cmake
test/Depencies/cereal/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  cereal.sln  cmake_install.cmake
test/Depencies/lua/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  lua.sln  lua54.vcxproj  lua54.vcxproj.filters
test/Depencies/rttr/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  rttr.sln
test/Depencies/rttr/CMake/: rttr-config-version.cmake
test/Depencies/rttr/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
test/Depencies/rttr/src/rttr/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  pch.cpp  rttr_core.vcxproj  rttr_core.vcxproj.filters
test/Depencies/sol2/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
test/GearX/: Engine.vcxproj  Engine.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Starter.vcxproj  Starter.vcxproj.filters  cmake_install.cmake
test/GearX/runtime/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  imgui.vcxproj  imgui.vcxproj.filters  runtime.vcxproj  runtime.vcxproj.filters
test/asset/: GearX.d.lua
